--- a/src/assets/css/components/UserInfo.scss
+++ b/src/assets/css/components/UserInfo.scss
@@ -78,7 +78,7 @@
         border: 1px solid #42c02e;
         color: #fff;
       }
-      .btn {
+      .btn-money {
         height: 40px;
         line-height: 40px;
         display: inline-block;
