--- a/src/assets/css/components/ArticleDirectory.scss
+++ b/src/assets/css/components/ArticleDirectory.scss
@@ -147,7 +147,7 @@
     -webkit-transition-property: background-color;
     -o-transition-property: background-color;
     transition-property: background-color;
-    //visibility: hidden;
+    visibility: hidden;
     @extend .animation;
     &.show {
       background-color: rgba(0, 0, 0, 0.7);
